tooling/nargo_cli/tests/snapshots/execution_success/struct_fields_ordering/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct myStruct {
    foo: u32,
    bar: Field,
}

fn main(y: pub myStruct) {
    assert(y.foo == 5);
    assert(y.bar == 7);
}
