tooling/nargo_cli/tests/snapshots/execution_success/struct_fields_ordering/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32, v1: Field):
    (no terminator instruction)
}
